--- a/src/themes/accelerator/components/HtmlHead.astro
+++ b/src/themes/accelerator/components/HtmlHead.astro
@@ -26,7 +26,7 @@ const title = `${ socialTitle } | ${ SITE.title }`;
   <meta charset="utf-8" />
   <title>{ title }</title>
   <meta name="robots" content={ 'max-image-preview:large, ' + robots } />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
   <meta name="keywords" content={ frontmatter.keywords } />
   <meta name="description" content={ frontmatter.description } />
   <meta name="theme-color" content={ SITE.themeColor } />
