Switch off telephone format detection.

--- a/src/themes/accelerator/components/HtmlHead.astro
+++ b/src/themes/accelerator/components/HtmlHead.astro
@@ -27,6 +27,7 @@ const title = `${ socialTitle } | ${ SITE.title }`;
   <title>{ title }</title>
   <meta name="robots" content={ 'max-image-preview:large, ' + robots } />
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
+  <meta name="format-detection" content="telephone=no" />
   <meta name="keywords" content={ frontmatter.keywords } />
   <meta name="description" content={ frontmatter.description } />
   <meta name="theme-color" content={ SITE.themeColor } />
