Add meta tag for article image structured data

--- a/src/themes/accelerator/layouts/Default.astro
+++ b/src/themes/accelerator/layouts/Default.astro
@@ -1,6 +1,7 @@
 ---
 import { Accelerator } from 'astro-accelerator-utils';
 import type { Frontmatter } from 'astro-accelerator-utils/types/Frontmatter';
+import { getImageInfo } from '@util/custom-markdown.mjs';
 import { SITE } from '@config';
 import Head from '@components/HtmlHead.astro';
 import Header from '@components/Header.astro';
@@ -24,6 +25,10 @@ const textDirection = frontmatter.dir ?? SITE.default.dir;
 
 // Logic
 const accelerator = new Accelerator(SITE);
+
+const metaImage = frontmatter.bannerImage
+      ? getImageInfo(frontmatter.bannerImage.src, '', SITE.images.contentSize)
+      : null
 
 const title = await accelerator.markdown.getInlineHtmlFrom(frontmatter.title ?? SITE.title);
 const subtitle = frontmatter.subtitle
@@ -50,6 +55,7 @@ const site_features = SITE.featureFlags;
                         )}
                     </header>
                     <div class="page-content anim-show-parent" itemprop="articleBody">
+                        {metaImage && <meta itemprop="image" content={ metaImage.src } />}
                         <TableOfContents frontmatter={ frontmatter } headings={ headings } lang={ lang } />
                         <slot />
                         <Authors frontmatter={ frontmatter } lang={ lang } />
