--- a/public/css/vars.css
+++ b/public/css/vars.css
@@ -45,10 +45,14 @@
     --box-shadow: 0 12px 24px -12px rgb(0 0 0 / 80%);
     --box-shadow-slight: 0 6px 12px -6px rgb(0 0 0 / 40%);
 
+    --content-width: 78vw;
     --navigation-width: 260px;
     --grid-gap: 1rem;
     --grid-max-width: 60rem;
     --grid-width: 90vw;
+
+    /* Calculate the mobile width by removing l/r columns and grid gap */
+    --content-width-mobile: calc(100vw - (0.5rem * 2) - (var(--grid-gap) * 2));
 }
 
 @media (prefers-color-scheme: dark) {
