--- a/src/pages/tag/[tag]/[page].astro
+++ b/src/pages/tag/[tag]/[page].astro
@@ -30,8 +30,7 @@ const frontmatter: Frontmatter = {
   title: title,
   keywords: `${slug},articles`,
   description: `${SITE.title} ${slug} articles.`,
-  pubDate: pubDate,
-  robots: 'noindex, follow'
+  pubDate: pubDate
 };
 
 // Language
