--- a/src/themes/accelerator/components/Breadcrumbs.astro
+++ b/src/themes/accelerator/components/Breadcrumbs.astro
@@ -20,7 +20,7 @@ const _ = Lang(lang);
 const accelerator = new Accelerator(SITE);
 
 const currentUrl = new URL(Astro.request.url);
-const navPages = accelerator.navigation.breadcrumbs(currentUrl, SITE.subfolder);
+const navPages = accelerator.navigation.breadcrumbs(currentUrl, SITE.subfolder, breadcrumbs?.length ?? 0);
 let metaIndex = navPages.length;
 ---
 <nav class="site-breadcrumbs" aria-label={ _(Translations.aria.breadcrumbs) }>
