--- a/src/pages/authors/[author]/[page].astro
+++ b/src/pages/authors/[author]/[page].astro
@@ -55,7 +55,7 @@ type AuthorData = {
 }
 
 export async function getData() {
-  const sourcePosts = await Astro.glob('../../**/*.md') satisfies MarkdownInstance[];
+  const sourcePosts = await Astro.glob(['../../**/*.md', '../../**/*.mdx']) satisfies MarkdownInstance[];
   const data: AuthorData = { posts: [], authors: []};
 
   data.posts = sourcePosts
