--- a/public/css/main.css
+++ b/public/css/main.css
@@ -106,6 +106,7 @@ h1, h2, h3, h4, h5, h6 {
 h1 {
     font-size: 3rem;
     font-size: clamp(2rem, 6vw, 3rem);
+    margin: 0.4em 0 0.6em 0;
 }
 
 h2 {
@@ -243,6 +244,7 @@ nav.skip-links a:focus {
     background-color: var(--aft-breadcrumb);
     color: var(--fore-breadcrumb);
     padding: 0 1em;
+    text-align: center;
 }
 
 .site-breadcrumbs li {
@@ -442,28 +444,15 @@ nav.site-nav h2 {
 /* Main content group */
 
 .content-group {
-    width: 100%;
-    max-width: 100%;
-    display: grid; 
-    grid-template-columns: minmax(5vw, 50vw) var(--navigation-width) min-content minmax(5vw, 50vw);
-    grid-template-areas: 
-        "top top top top"
-        "left menu content right";
-    gap: var(--grid-gap);
-    padding-top: 0;
-}
-
-.content-group header {
-    grid-area: top;
-    text-align: center;
-    padding-bottom: var(--block-gap);
-}
-
-.content-group header p {
-    width: 60%;
-    margin: 0 auto;
-    font-size: 2em;
-    color: var(--fore-headings);
+    margin-inline: 0 auto;
+    grid-template-columns: var(--navigation-width) minmax(300px, 800px);
+    display: grid;
+    grid-template-rows: auto;
+    gap: var(--grid-gap-main);
+    max-width: 100vw;
+    justify-content: center;
+    grid-template-areas:
+    "menu content";
 }
 
 .content-group nav {
@@ -471,15 +460,8 @@ nav.site-nav h2 {
     padding: 0 1rem 0 0;
 }
 
-.content-group main,
-.content-group article {
-    display: contents;
-}
-
-.content-group article > .page-content {
+.content-group main {
     grid-area: content;
-    width: calc(var(--content-width) - var(--navigation-width));
-    max-width: calc(var(--grid-max-width) - var(--navigation-width));
 }
 
 @media (max-width: 860px) {
@@ -487,15 +469,11 @@ nav.site-nav h2 {
         grid-template-columns: 1rem auto 1rem;
         grid-template-rows: auto auto auto;
         gap: 0;
-        grid-template-areas: 
-          "top top top"
-          "left content right"
-          "left menu right";
-    }
-
-    .content-group article > .page-content {
-        width: unset;
-        max-width: var(--content-width-mobile);
+        grid-template-areas:
+        "left top   right" 
+        "left toc   right" 
+        "left content right" 
+        "left menu  right";
     }
 }
 
@@ -509,7 +487,7 @@ nav.site-nav h2 {
 }
 
 .page-toc summary {
-    text-align: center;
+    padding-inline: 1rem;
 }
 
 .page-toc ol {
@@ -916,8 +894,8 @@ pre.astro-code code {
     float: right;
     overflow: hidden;
     display: block;
-    width: 1.2em;
-    height: 1.5em;
+    width: 1.3em;
+    height: 1.6em;
     opacity: 0.5;
 }
 
