--- a/public/css/main.css
+++ b/public/css/main.css
@@ -251,11 +251,13 @@ nav.skip-links a:focus {
 }
 
 .site-breadcrumbs li::before {
-    content: '>'
+    content: '>';
+    margin-inline-end: 0.3em;
 }
 
 .site-breadcrumbs li:first-child::before {
-    content: ''
+    content: '';
+    margin-inline-end: 0;
 }
 
 .site-breadcrumbs a[aria-current] {
@@ -528,23 +530,23 @@ nav.site-nav h2 {
 }
 
 .page-toc li.toc-lev-2 {
-    padding-left: 1rem;
+    margin-left: 0rem;
 }
 
 .page-toc li.toc-lev-3 a {
-    padding-left: 2rem;
+    margin-left: 1rem;
 }
 
 .page-toc li.toc-lev-4 a {
-    padding-left: 3rem;
+    margin-left: 2rem;
 }
 
 .page-toc li.toc-lev-5 a {
-    padding-left: 4rem;
+    margin-left: 3rem;
 }
 
 .page-toc li.toc-lev-6 a {
-    padding-left: 5rem;
+    margin-left: 4rem;
 }
 
 /* Footer */
