--- a/public/css/main.css
+++ b/public/css/main.css
@@ -604,44 +604,259 @@ nav.site-nav h2 {
 
 /* Site Search */
 
-form.site-search {
-    padding: 1em;
+.site-search__wrapper {
+    position: relative;
+    width: 100%;
+    max-width: 34.75rem;
+    transition: max-width var(--search-dropdown-duration) ease-in-out;
 }
 
-form.site-search div {
-    display: grid;
-    grid-template-columns: fit-content(400px) auto 30px;
-    gap: 1em;
+.site-search__wrapper.is-active {
+    max-width: 57.8rem;
 }
 
-form.site-search label > * {
-    padding: 0.2em;
-}
-
-form.site-search #site-search-button {
-    display: none;
-}
-
-#site-search-results {
-    padding-bottom: 3rem;
+.site-search {
+    height: var(--search-height);
+    border-radius: var(--search-border-radius);
+    border: var(--search-border);
+    background-color: var(--white);
+    position: relative;
+    z-index: 1
 }
 
 .site-search-results {
-    font-size: 1.3rem;
+    background-color: var(--white);
+    position: absolute;
+    top: var(--search-height);
+    width: 100%;
+    padding: 0;
+    border-radius: var(--search-border-radius);
+    border-radius: 0.9375rem;
+    list-style-type: none;
+    overflow-y: scroll;
+    transition-property:  padding, transform, visibility;
+    transition-duration: var(--search-dropdown-duration);
+    transition-timing-function: ease-in-out;
+    visibility: hidden;
+    transform: translateY(0) scaleY(0);
+    z-index: 1;
+    max-height: var(--search-dropdown-height);
+    transform-origin: top;
+    will-change: transform;
 }
 
-.site-search-results a {
+.site-search.is-active+.site-search-results {
+    padding: 1rem 0;
+    transform: translateY(1.37rem) scaleY(1);
+    visibility: visible;
+}
+
+.site-search-results ul {
+    list-style-type: none;
+    margin-inline-start: 0;
+}
+
+.site-search-results ul:not(.post-list) {
+    margin: 0;
+}
+
+.site-search-results .show-more {
+    border-radius: 4.0625rem;
+    background: #00FFA3;
+    padding: 0.5rem 0.75rem;
     display: block;
-    padding: 0.2em;
+    margin: 1rem auto 0;
+    cursor: pointer;
 }
 
-.site-search-results .result-text {
-    font-size: 1rem;
+.site-search__overlay {
+    opacity: 0;
+    visibility: hidden;
+    background: rgba(12, 26, 36, 0.30);
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    transition: opacity var(--search-dropdown-duration) ease-in-out;
+    z-index: 1;
 }
 
-.site-search-results .result-path {
-    font-size: 1rem;
-    font-family: var(--code-font);
+.site-search__wrapper.is-active .site-search__overlay {
+    opacity: 1;
+    visibility: visible;
+}
+
+.site-search-query {
+    width: 100%;
+    background: transparent;
+    height: 100%;
+    padding: 0 1rem;
+    width: calc(100% - 2rem);
+}
+
+.search-results__heading {
+    visibility: hidden;
+}
+
+.site-search.is-active+.site-search-results>.search-results__heading {
+    visibility: visible;
+}
+
+.site-search-results__item {
+    background-color: transparent;
+    transition-property: background-color, border-color;
+    transition-duration: var(--search-dropdown-duration);
+    transition-timing-function: ease-in-out;
+    border-bottom: 0.0625rem solid;
+    border-color: var(--search-item-border-color);
+    position: relative;
+}
+
+.site-search-results__item:hover {
+    --hover-color: rgba(13, 128, 216, 0.07);
+    background-color: var(--hover-color);
+    border-color: var(--hover-color);
+}
+
+.site-search-results__item::after {
+    content: "";
+    display: inline-block;
+    width: 0.75rem;
+    height: 1.25rem;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='12' height='20' viewBox='0 0 12 20' fill='none'%3E%3Cpath d='M2 18L10 10L2 2' stroke='%230D80D8' stroke-width='2.4' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
+    background-size: 0.75rem 1.25rem;
+    background-repeat: no-repeat;
+    position: absolute;
+    right: 2rem;
+    top: 50%;
+    transform: translateY(-50%) translateX(-1rem);
+    opacity: 0;
+    transition-property: opacity, transform;
+    transition-duration: var(--search-dropdown-duration);
+    transition-timing-function: ease-in-out;
+}
+
+.site-search-results__item:hover::after {
+    opacity: 1;
+    transform: translateY(-50%) translateX(0);
+}
+
+@media (max-width: 930px) {
+    .site-search-results__item {
+        padding: 1rem;
+    }
+}
+
+.result-wrapper {
+    display: flex;
+    padding: 1.5rem 3.6rem 1.75rem;
+    text-decoration: none;
+    flex-direction: column;
+    gap: 0.56rem;
+}
+
+.result-wrapper:hover {
+    background-color: initial;
+}
+
+@media (max-width: 930px) {
+    .result-wrapper {
+        padding: 1rem;
+    }
+}
+
+.site-search-results__item:hover .result-wrapper {
+    color: initial;
+}
+
+.result-wrapper mark {
+    color: var(--blue-500);
+}
+
+.result-path {
+    color:  var(--blue-grey-lighter);
+    font-size: var(--font-size-small);
+    font-weight: 400;
+    display: flex;
+    gap: 0.5rem;
+    flex-wrap: wrap;
+}
+
+.result-path__segment:last-child {
+    color: var(--blue-grey);
+}
+
+.result-title {
+    color: var(--blue-midnight);
+    font-size: var(--font-size-large);
+    font-weight: 700;
+}
+
+.result-description {
+    color: var(--blue-grey-dark);
+    font-size: var(--font-size-medium);
+    font-weight: 400;
+}
+
+.site-search>fieldset {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    padding: 0 1rem;
+}
+
+.site-search__remove-btn {
+    margin-left: auto;
+    background-color: transparent;
+    padding: 0.5rem;
+    cursor: pointer;
+    visibility: hidden;
+    transition: transform var(--search-dropdown-duration) ease-in-out;
+}
+
+.site-search__remove-btn:hover {
+    transform: scale(1.2);
+}
+
+.site-search.is-active .site-search__remove-btn {
+    visibility: visible;
+}
+
+.site-search__mobile {
+    display: none;
+}
+
+@media (max-width: 930px) {
+    .site-header .site-search__wrapper {
+        max-width: fit-content;
+    }
+
+    .site-header .site-search {
+        display: none;
+    }
+
+    .site-header .site-search__mobile {
+        --search-mobile-size: 3rem;
+        display: flex;
+        width: var(--search-mobile-size);
+        height: var(--search-mobile-size);
+        border-radius: calc(var(--search-mobile-size) / 2);
+        justify-content: center;
+        align-items: center;
+        border: var(--search-border);
+    }
+}
+
+.site-search .show-more {
+    display: inline-block;
+    font-size: var(--font-size-small);
+    border-radius: 100px;
+    text-decoration: none;
+    text-align: center;
+    padding: 0.2em 0.6em 0.3em 0.6em;
+    color: var(--color-hint);
+    background-color: var(--bg-color-hint);
 }
 
 .result-headings li {
