Update tests for new search selectors

--- a/src/themes/accelerator/components/Search.astro
+++ b/src/themes/accelerator/components/Search.astro
@@ -54,7 +54,7 @@ const searchUrl =
         type="text"
         name={SITE.search.fallbackSite ?? "q"}
         class="site-search-query"
-        placeholder="Search here... Try “Runbooks”"
+        placeholder={_(Translations.search.search_for)}
         spellcheck="true"
         autocomplete="off"
         data-site-search-query
